--- a/app/globals.css
+++ b/app/globals.css
@@ -57,3 +57,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+.no-scroll-bar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scroll-bar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
